# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  default_config.json  main.cpp  raytracer  testing.txt  until.h  vec3.cpp  vec3.h
raytracer.dSYM/Contents/Resources/DWARF/: raytracer
report/: report.tex
res/: CornellBox-Original-vertex_normals.mtl  CornellBox-Original.mtl  CornellBox-Original.txt  CornellBox-Sphere.mtl  CornellBox-Sphere.txt  setup.txt
src/: aabb.h  camera.h  collision_detection.h  color.h  main.cc  main.cpp  main.cu  material.h  obj_loader.h  octree.h  ray.h  scene.h  triangle.h  util.h  vec3.h  vertex.h
src/ADS/: ads.h
src/ADS/DummyAds/: dummy_ads.h
src/ADS/Octree/: octree.cc  octree.cu  octree.h
src/ADS/Octree/OctreeParametric/: octree_parametric.cc  octree_parametric.cu  octree_parametric.h
src/ObjLoader/: obj_loader.cc  obj_loader.h
src/Renderer/: renderer.cc  renderer.cu  renderer.h
